--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,9 +11,7 @@
   <!--fav icon--> 
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
   <link rel="stylesheet" href="//d2vfcgp7l1sb91.cloudfront.net/studio/8.1.2.1690/wmapp/styles/css/wm-style.css"> 
-  <!-- theme --> 
-  <link rel="stylesheet" href="themes/cool-blue/style.css" theme="wmtheme"> 
-  <!-- /theme --> 
+  <!-- theme --><link rel="stylesheet" href="themes/gray-orange/style.css" theme="wmtheme"/><!-- /theme --> 
   <link rel="stylesheet" href="app.css"> 
  </head> 
  <body class="wm-app" data-ng-app="Application" id="ng-app" data-ng-controller="AppController"> 
